--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -11,28 +11,28 @@
 
 @media (min-width: 1000px) and (min-height: 700px){
     .Burger{
-        width: 700px;
+        width: 80%;
         height: 600px;
     }
 }
 
 @media (min-width: 500px) and (min-height: 401px){
     .Burger{
-        width: 450px;
+        width: 80%;
         height: 400px;
     }
 }
 
 @media (min-width: 500px) and (min-height: 400px){
     .Burger{
-        width: 350px;
+        width: 80%;
         height: 300px;
     }
 }
 
 @media (min-width: 350px) and (min-height: 250px){
     .Burger{
-        width: 250px;
-        height: 150px;
+        width: 500px;
+        height: 300px;
     }
 }
