--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,5 +1,5 @@
 .Modal {
-    position: fixed;
+    position: absolute;
     z-index: 500;
     background-color: white;
     width: 70%;
@@ -7,13 +7,14 @@
     box-shadow: 1px 1px 1px black;
     padding: 16px;
     left: 15%;
-    top: 30%;
+    top: 10%;
     box-sizing: border-box;
-    transition: all 0.3s ease-out;
+    transition: all 0.5s ease-out;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
     .Modal {
+        position: fixed;
         width: 500px;
         left: calc(50% - 250px);
     }
