--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html{
+  min-width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
 code {
