--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -32,7 +32,7 @@
 
 @media (min-width: 350px) and (min-height: 250px){
     .Burger{
-        width: 50%;
+        width: 500px;
         height: 300px;
     }
 }
