Adjusted design issues. Created authentication modal

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,38 +1,22 @@
 .Burger{
-    width : 100%;
+    width: 100%;
     margin: auto;
-    height: 250px;
+    height: 350px;
     overflow: scroll;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
+    transition: all 0.3s ease-out;
 }
 
-
-@media (min-width: 1000px) and (min-height: 700px){
+@media (min-width: 600px) {
     .Burger{
-        width: 50%;
-        height: 600px;
+        width: 70%;
     }
 }
 
-@media (min-width: 500px) and (min-height: 401px){
+@media (min-width: 1030px) {
     .Burger{
         width: 50%;
-        height: 400px;
-    }
-}
-
-@media (min-width: 500px) and (min-height: 400px){
-    .Burger{
-        width: 50%;
-        height: 300px;
-    }
-}
-
-@media (min-width: 350px) and (min-height: 250px){
-    .Burger{
-        width: 500px;
-        height: 300px;
     }
 }
