--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -2,14 +2,21 @@
     position: absolute;
     z-index: 500;
     background-color: white;
-    width: 70%;
+    width: 90%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 15%;
+    left: 5%;
     top: 10%;
     box-sizing: border-box;
     transition: all 0.5s ease-out;
+}
+
+@media (min-width: 500px) {
+    .Modal {
+        width: 70%;
+        left: 15%;
+    }
 }
 
 @media (min-width: 800px) {
