--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,18 +1,14 @@
 .Button {
     background-color: transparent;
     border: none;
+    border-radius: 5px;
     color: white;
     outline: none;
     cursor: pointer;
     font: inherit;
-    padding: 10px;
+    padding: 10px 20px;
     margin: 10px;
     font-weight: bold;
-}
-
-.Button:first-of-type {
-    margin-left: 0;
-    padding-left: 0;
 }
 
 .Success {
@@ -20,5 +16,31 @@
 }
 
 .Danger {
-    color: #944317;
+    background: #f15500;
+    color: #ffffff;
+}
+
+.Login {
+    background: rgb(177, 177, 49);
+    color: rgb(238, 238, 214);
+}
+
+.Login:hover {
+    background: rgb(238, 238, 214) ;
+    color: rgb(177, 177, 49);
+}
+
+.Danger:hover {
+    background: #f76c21;
+    color: #ffffff;
+}
+
+.submit{
+    background: orange;
+    color: rgb(253, 253, 107);
+}
+
+.submit:hover{
+    background: rgb(233, 177, 74);
+    color: rgb(126, 126, 21);
 }
