--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -9,7 +9,7 @@
     left: 5%;
     top: 10%;
     box-sizing: border-box;
-    transition: all 0.5s ease-out;
+    transition: all 0.7s linear;
 }
 
 @media (min-width: 500px) {
@@ -20,7 +20,7 @@
 }
 
 @media (min-width: 800px) {
-    .Modal {
+    .Modal { 
         position: fixed;
         width: 500px;
         left: calc(50% - 250px);
